--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,11 +1,15 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     padding: 0;
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
     background-color: #718fc8;
+    /* color: #fff; */
 }
 
 a {
@@ -34,15 +38,87 @@ button {
     transition: 0.2s;
 }
 
-button.confirm {
-   background-color: #1b3493; 
+button.confirmar {
+    background-color: #1b3493;
 }
-button.confirm:hover {
-    background-color: #142770; 
- }
+
+button.confirmar:hover {
+    background-color: #142770;
+}
+
+button.cancelar {
+    background-color: #c31339;
+}
+
+button.cancelar:hover {
+    background-color: #990b2a;
+}
 
 .input-field {
     display: flex;
     flex-direction: column;
     gap: 4px;
+}
+
+.pagina-montada {
+    display: flex;
+}
+
+.pagina-montada .coluna-dupla {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.menu-lateral {
+    width: 300px;
+    height: 100vh;
+    padding: 12px;
+    background-color: #3c51a5;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 16px;
+}
+
+.menu-lateral a {
+    text-decoration: none;
+}
+
+.menu-lateral .sair {
+    background-color: #14267075;
+    border-radius: 8px;
+    padding: 4px 8px;
+    width: max-content;
+}
+.menu-lateral .sair:hover {
+    background-color: #142670;
+}
+
+.menu-lateral img {
+    margin: 0 auto;
+}
+
+.menu-lateral ul {
+    list-style: none;
+    margin-top: 24px;
+}
+
+.menu-lateral ul li {
+    display: block;
+    margin-top: 4px;
+    background-color: #14267075;
+    border-radius: 8px;
+    padding: 4px 8px;
+}
+
+.menu-lateral ul li:hover {
+    background-color: #142670;
+}
+
+.menu-lateral ul li a {
+    margin: 6px;
+    padding: 4px 8px;
 }
